# discord-tron-master

./: .gitignore  AGENTS.md  LICENSE.md  README.md  client_config.json  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
discord_tron_master/: __main__.py  api.py  auth.py  bot.py  create_tables.py  example_websocket.py  gunicorn_entry.py  utils.py  websocket_hub.py  wsgi.py
discord_tron_master/adapters/: emulator_bridge.py  tge_ports.py
discord_tron_master/classes/: app_config.py  command_processor.py  custom_help.py  database_handler.py  guilds.py  job.py  job_queue.py  log_format.py  message.py  queue_manager.py  remote_ollama_broker.py  resolution.py  text_game_webui_runner.py  text_replies.py  websocket_handler.py  websocket_server.py  webui_image_bridge.py  worker.py  worker_manager.py  zork_emulator.py  zork_memory.py
discord_tron_master/classes/command_processors/: discord.py  hardware.py  ollama.py
discord_tron_master/classes/discord/: message_helpers.py
discord_tron_master/classes/jobs/: bark_tts_job.py  image_generation_job.py  image_upscaling_job.py  image_variation_job.py  llama_prediction_job.py  ollama_completion_job.py  prompt_variation_job.py  promptless_variation_job.py  stablelm_prediction_job.py  stableml_prediction_job.py  stablevicuna_prediction_job.py  webui_image_job.py
discord_tron_master/classes/openai/: chat_ml.py  text.py  tokens.py
discord_tron_master/classes/stabilityai/: api.py
discord_tron_master/cogs/: zork.py
discord_tron_master/cogs/events/: reactions.py
discord_tron_master/cogs/image/: __init__.py  generate.py  img2img.py
discord_tron_master/cogs/llama/: predict.py
discord_tron_master/cogs/models/: model.py  scheduler.py
discord_tron_master/cogs/stablelm/: stablelm_predict.py
discord_tron_master/cogs/stableml/: stableml_predict.py
discord_tron_master/cogs/stablevicuna/: stablevicuna_predict.py
discord_tron_master/cogs/tts/: audio_generation.py  bark.py
discord_tron_master/cogs/user/: settings.py  user.py
discord_tron_master/cogs/workers/: handler.py  worker.py
discord_tron_master/config/: example.json
discord_tron_master/exceptions/: registration.py
discord_tron_master/migrations/: env.py
discord_tron_master/migrations/versions/: 550dfbf40243_.py  d550cf09a12f_.py
discord_tron_master/models/: __init__.py  api_key.py  base.py  conversation.py  oauth_client.py  oauth_token.py  schedulers.py  transformers.py  user.py  user_history.py  zork.py
