[tool.poetry]
name = "discord-tron-master"
version = "0.1.0"
description = "The master connection hub and Discord / Flask interface for the PyTorch bot."
authors = ["bghira <bghira@users.github.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "discord_tron_master"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyopenssl = "^23.1.1"
bcrypt = "^4.0.1"
pillow = "^10.0.1"
requests = "^2.28.2"
huggingface = "^0.0.1"
huggingface-hub = "^0.13.4"
colorama = "^0.4.6"
pynacl = "^1.5.0"
openai = "^0.27.4"
tiktoken = "^0.3.3"
transformers = "^4.28.1"
accelerate = "^0.18.0"
gunicorn = "^20.1.0"
scipy = "^1.10.1"
wheel = "^0.40.0"
jaxlib = "^0.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
