[tool.poetry]
name = "discord-tron-master"
version = "0.1.0"
description = "The master connection hub and Discord / Flask interface for the PyTorch bot."
authors = ["bghira <bghira@users.github.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "discord_tron_master"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyopenssl = "^23.1.1"
bcrypt = "^4.0.1"
pillow = "^10.0.1"
requests = "^2.28.2"
huggingface = "^0.0.1"
huggingface-hub = "^0.20.2"
colorama = "^0.4.6"
pynacl = "^1.5.0"
openai = "^1.21.2"
tiktoken = "^0.3.3"
transformers = "^4.36.2"
accelerate = "^0.18.0"
gunicorn = "^22.0.0"
scipy = "^1.10.1"
wheel = "^0.40.0"
jaxlib = "^0.4.14"
flask-sqlalchemy = "^3.1.1"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-oauthlib = "^0.9.6"
websockets = "^13.1"
discord = ">=2.2.2"
flask-migrate = "^4.0.7"
mysql-connector-python = "^9.0.0"
python-dotenv = "^1.0.1"
websocket = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
